Site notices full width and fix content wrap
Bug: T263083
Bug: T263673

--- a/resources/skin.wikimediaapiportal.styles/common-pagenav.less
+++ b/resources/skin.wikimediaapiportal.styles/common-pagenav.less
@@ -1,9 +1,6 @@
 .wm-page-nav {
 	margin: 1.25rem 0 0 0;
 	list-style-type: none;
-	>.nav-item {
-		min-width: 13.75rem;
-	}
 	.nav-item {
 		a.nav-link {
 			width: 100%;
